Reservation Component update
